fixed translation API